# ha-salute-bridge

./: .gitignore  README.md  repository.yaml
ha-salute-bridge/: Dockerfile  build.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
ha-salute-bridge/data/: options.local.json
ha-salute-bridge/rootfs/: run.sh
ha-salute-bridge/rootfs/app/: const.py  logger.py  main.py  options.py  run.sh  utils.py
ha-salute-bridge/rootfs/app/devices/: __init__.py  base.py  models.py
ha-salute-bridge/rootfs/app/ha_api/: base.py  client.py
ha-salute-bridge/rootfs/app/models/: api.py  exceptions.py
ha-salute-bridge/rootfs/app/mqtt/: base.py
ha-salute-bridge/rootfs/app/salute/: base.py
ha-salute-bridge/rootfs/app/static/ui2/: main.js
ha-salute-bridge/rootfs/app/templates/: index.html
ha-salute-bridge/rootfs/app/web/: routes.py
