[tool.poetry]
name = "ha-salute-bridge"
version = "0.1.0"
description = ""
authors = ["Ilya <semjef@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
aiomqtt = "^2.3.0"
requests = "^2.32.0"
python-hass-client = {git = "https://github.com/EuleMitKeule/python-hass-client", rev = "master"}
fastapi = "^0.115.6"
jinja2 = "^3.1.4"
uvicorn = "^0.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
